# dancelor

./: .envrc.sample  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  README.org  dancelor.opam  dancelor.opam.template  dune  dune-project  flake.nix
lib/madge/: dune  madge.ml  madge.mli  madge_client.ml  madge_client.mli  madge_common.ml  madge_common.mli  madge_query.ml  madge_query.mli  madge_router.ml  madge_router.mli  madge_server.ml  madge_server.mli  serialisers.ml  serialisers.mli
src/client/: auth.ml  bookExplorer.ml  bookViewer.ml  client.ml  compose.ml  composer.ml  composer.mli  composerInterface.ml  creditEditor.ml  creditEditorInterface.ml  creditViewer.ml  danceViewer.ml  dancelor_client_api.ml  dancelor_client_page.ml  dancelor_client_router.ml  dispatcher.ml  dune  environment.ml  environment.mli  filter.ml  footer.ml  formatters.ml  header.ml  helpers.ml  history.ml  html.ml  index.ml  job.ml  main.ml  mainPage.ml  model.ml  page.ml  page.mli  permission.ml  person.ml  personViewer.ml  programExplorer.ml  programViewer.ml  search.ml  setExplorer.ml  (+13 more)
src/client/api/: dancelor_client_api.ml  dune
src/client/components/: button.ml  button.mli  choices.ml  choices.mli  component.ml  component.mli  componentList.ml  contextLinks.ml  context_links.ml  cpair.ml  cutils.ml  dialog.ml  dialog.mli  dune  editor.ml  editor.mli  input.ml  input.mli  listSelector.ml  listSelector.mli  modalBox.ml  nil.ml  pageNav.ml  pageNav.mli  pagination.ml  pagination.mli  pair.ml  parameteriser.ml  plus.ml  plus.mli  quickSearchBar.ml  quickSearchBar.mli  search.ml  search.mli  searchBar.ml  searchBar.mli  search_bar.ml  search_bar.mli  selector.ml  selector.mli  (+8 more)
src/client/elements/: README.md  buttons.ml  dune  fa.ml  h.ml  h.mli  image.ml  inputs.ml  jsHelpers.ml  page.ml  pageNav.ml  pageNavNewAPI.ml  searchBar.ml  searchBarNewAPI.ml  searchResults.ml  style.ml  table.ml  text.ml
src/client/formatters/: book.ml  book.mli  bookNewAPI.ml  credit.ml  creditNewAPI.ml  dance.ml  dance.mli  danceNewAPI.ml  dancelor_client_formatters.ml  dune  kind.ml  kindNewAPI.ml  person.ml  person.mli  set.ml  set.mli  setNewAPI.ml  source.ml  source.mli  tune.ml  tune.mli  tuneNewAPI.ml  version.ml  version.mli  versionNewAPI.ml
src/client/html/: dancelor_client_html.ml  dancelor_client_html.mli  dune  newAPI.ml
src/client/model/: any.ml  anyCore.ml  anyFilter.ml  anyLifted.ml  book.ml  bookCore.ml  bookFilter.ml  bookLifted.ml  bookParameters.ml  credit.ml  creditCore.ml  creditFilter.ml  creditLifted.ml  dance.ml  danceCore.ml  danceFilter.ml  danceLifted.ml  dancelor_client_model.ml  dune  formula.ml  kind.ml  model.ml  music.ml  pagination.ml  person.ml  personCore.ml  personLifted.ml  program.ml  score.ml  search.ml  set.ml  setCore.ml  setFilter.ml  setLifted.ml  setOrder.ml  setParameters.ml  slice.ml  source.ml  textFormula.ml  transposition.ml  (+11 more)
src/client/tables/: book.ml  dTable.ml  dancelor_client_tables.ml  dune  set.ml  theNewAPI.ml  tune.ml  version.ml
src/client/utils/: action.ml  alert.ml  anyLink.ml  anyResult.ml  anyResultHtml.ml  anyResultNewAPI.ml  any_result.ml  button.ml  button.mli  clipboard.ml  dancelor_client_utils.ml  documentation.ml  dune  helpers.ml  icon.ml  markdown.ml  resultRow.ml  result_row.ml  tables.ml  toast.ml  utils.ml
src/client/views/: add_to.ml  authCreateUserViewer.ml  authPasswordResetViewer.ml  bookDownloadDialog.ml  bookEditor.ml  bookViewer.ml  book_download_dialog.ml  book_editor.ml  book_viewer.ml  danceDownloadDialog.ml  danceEditor.ml  danceViewer.ml  dance_editor.ml  dance_viewer.ml  dune  explorer.ml  header.ml  index.ml  issueReport.ml  issueReportDialog.ml  issue_report.ml  mainPage.ml  search.ml  (+44 more)
src/common/: SCDDB.ml  SCDDB.mli  apiRouter.ml  apiRouter.mli  cache.ml  config.ml  constant.ml  dancelor_common.ml  dancelor_common_pageRouter.ml  date.ml  dune  entry.ml  entry.mli  error.ml  extFilename.ml  extList.ml  extPervasives.ml  extSeq.ml  extSeq.mli  extString.ml  filesystem.ml  formula.ml  formula.mli  formula_entry.ml  formula_list.ml  formula_number.ml  formula_string.ml  formula_user.ml  jobId.ml  jobId.mli  job_id.ml  json.ml  json.mli  jsonHelpers.ml  jsonHelpers.mli  kind.ml  kindBase.ml  kindBase.mli  kindDance.ml  kindDance.mli  (+47 more)
src/madge/: dune  endpoints.ml  engine.ml  engine.mli  madge.ml  madge.mli  madge_client.ml  madge_client.mli  madge_client_new.ml  madge_cohttp_lwt_client.ml  madge_cohttp_lwt_server.ml  madge_common.ml  madge_common.mli  madge_common_new.ml  madge_new_router.ml  madge_query.ml  madge_query.mli  madge_router.ml  madge_router.mli  madge_server.ml  madge_server.mli  madge_server_new.ml  ppx_madge_wrapped_endpoints.ml  query.ml  query.mli  request.ml  request.mli  response.ml  response.mli  route.ml  route.mli  route_internal.ml  serialisation.ml
src/nes/: dune  nes.ml  nesCache.ml  nesCache.mli  nesChar.ml  nesDate.ml  nesDate.mli  nesDatetime.ml  nesDatetime.mli  nesDepart.ml  nesDepart.mli  nesFilesystem.ml  nesFresh.ml  nesFun.ml  nesHashedPassword.ml  nesHashedPassword.mli  nesHashedSecret.ml  nesHashedSecret.mli  nesInt.ml  nesInt.mli  nesInt64.ml  nesInt64.mli  nesJson.ml  nesJson.mli  nesLink.ml  nesList.ml  nesList.mli  nesLwt.ml  nesLwt_list.ml  nesLwt_list.mli  nesLwt_option.ml  nesLwt_option.mli  nesLwt_stream.ml  nesLwt_stream.mli  nesNEList.ml  nesNEList.mli  nesNEString.ml  nesNEString.mli  nesNonEmptyList.ml  nesNonEmptyList.mli  (+27 more)
src/renderer/: book.nix  dune  renderer.ml  renderer.nix  tune.nix
src/server/: common.ml  config.ml  credit.ml  dancelor_server.ml  dancelor_server_config.ml  dancelor_server_logs.ml  dune  environment.ml  environment.mli  linksAdder.ml  logger.ml  main.ml  metrics.ml  model.ml  permission.ml  person.ml  router.ml  router.mli  routine.ml  server.ml  set.ml  static.ml  tune.ml  view.ml
src/static/: dune  fonts.conf  fonts.css  index.html  manifest.json  site.webmanifest
src/style/: buttons.scss  components.scss  default.scss  dune  issue-report.scss  menu.scss  palette.scss  sandbox.scss  specifics.scss  style.scss
(+1080 files in other folders)
