opam-version: "2.0"

name: "dancelor"
version: "0.1"

synopsis: "A chancelor for RSCDS musicians"
description: """
A chancelor for RSCDS musicians.
"""

maintainer: "Niols <niols@niols.fr>"
authors: "Niols <niols@niols.fr>"
license: "GPL3"

depends: [
  "cohttp-lwt-unix"
  "dune"                     {build}
  "ezjsonm"
  "lwt_ppx"                  {build}
  "mustache"
  "ocaml"                    {build}
  "ppx_deriving"
  "ppx_inline_test"          {build | with-test}
  "ppx_protocol_conv_jsonm"
  "ppx_protocol_conv_yaml"
]

build: ["dune" "build" "-p" name "-j" jobs]
