opam-version: "2.0"

name: "dancelor"
version: "0.1"

synopsis: "A chancelor for RSCDS musicians"
description: """
A chancelor for RSCDS musicians.
"""

maintainer: "Niols <niols@niols.fr>"
authors: "Niols <niols@niols.fr>"
license: "GPL3"
homepage: "https://gitlab.vlanvin.fr/paris-band/dancelor"
bug-reports: "https://gitlab.vlanvin.fr/paris-band/dancelor/issues"

pin-depends: [
  [ "mustache.dev"  "git+https://github.com/Niols/ocaml-mustache" ]
]

depends: [
  "cohttp-lwt-unix"
  "dune"                     {build}
  "ezjsonm"
  "lwt_ppx"                  {build}
  "mustache"                 {= "dev"}
  "ocaml"                    {build}
  "ppx_deriving"
  "ppx_inline_test"          {build | with-test}
  "ppx_protocol_conv_jsonm"
  "yojson"
  "js_of_ocaml"
  "js_of_ocaml-lwt"
  "js_of_ocaml-ppx"          {build}
]

build: ["dune" "build" "-p" name "-j" jobs]
