opam-version: "2.0"

name: "dancelor"
version: "0.1"

synopsis: "A chancelor for RSCDS musicians"
description: """
A chancelor for RSCDS musicians.
"""

maintainer: "Niols <niols@niols.fr>"
authors: "Niols <niols@niols.fr>"
license: "GPL3"
homepage: "https://gitlab.vlanvin.fr/paris-band/dancelor"
bug-reports: "https://gitlab.vlanvin.fr/paris-band/dancelor/issues"

depends: [
  "cohttp-lwt-unix"
  "dune"                     {build}
  "js_of_ocaml"
  "js_of_ocaml-lwt"
  "js_of_ocaml-ppx"          {build}
  "lwt_ppx"                  {build}
  "ocaml"                    {build}
  "ppx_deriving"
  "ppx_deriving_yojson"
  "ppx_inline_test"          {build | with-test}
  "yojson"                   {>= "1.6.0"}
]

build: ["dune" "build" "-p" name "-j" jobs]
