(include_subdirs qualified)

(executables
 (names main)
 (modes js)
 (libraries
  cohttp-lwt-jsoo
  dancelor.common
  dancelor.madge.cohttp-lwt-client
  dancelor.nes
  js_of_ocaml-lwt
  js_of_ocaml-tyxml
  lwt_react
  react)
 (preprocess
  (pps
   js_of_ocaml-ppx
   lwt_ppx
   ppx_deriving_yojson
   ppx_monad
   ppx_monad_olwt
   ppx_monad_rlwt
   ppx_variants_conv)))

(install
 (section share)
 (files
  (main.bc.js as client.js)))
