(include_subdirs qualified)

(executables
 (names client)
 (modes js)
 (js_of_ocaml
  (flags --effects=cps))
 (libraries
  cohttp-lwt-jsoo
  dancelor.common
  dancelor.madge.client
  dancelor.nes
  js_of_ocaml-lwt
  js_of_ocaml-tyxml
  lwt_react
  monadise-lwt
  react)
 (preprocess
  (pps
   js_of_ocaml-ppx
   lwt_ppx
   ppx_deriving_yojson
   ppx_fields_conv
   ppx_monad
   ppx_monad_olwt
   ppx_monad_rlwt
   ppx_variants_conv)))

(install
 (section share)
 (files
  (client.bc.js as client.js)))
