(include_subdirs qualified)

(library
 (name common)
 (public_name dancelor.common)
 (libraries
  cohttp
  cohttp-lwt
  dancelor.madge
  dancelor.nes
  logs
  lwt
  menhirLib
  str
  yojson)
 (preprocess
  (pps
   ppx_madge_wrapped_endpoints
   lwt_ppx
   ppx_deriving.std
   ppx_fields_conv
   ppx_inline_test
   ppx_monad
   ppx_monad_olwt
   ppx_monad_rlwt
   ppx_variants_conv
   ppx_yojson_conv))
 (inline_tests))

(ocamllex kindDanceLexer textFormulaLexer)

(menhir
 (modules kindDanceParser textFormulaParser)
 (flags --table))
