(include_subdirs qualified)

(library
 (name common)
 (public_name dancelor.common)
 (libraries
  cohttp
  cohttp-lwt
  dancelor.madge
  dancelor.nes
  logs
  lwt
  menhirLib
  ppx_deriving_yojson.runtime
  str
  yojson)
 (preprocess
  (pps
   ppx_madge_wrapped_endpoints
   lwt_ppx
   ppx_deriving.std
   ppx_deriving_yojson
   ppx_fields_conv
   ppx_inline_test
   ppx_monad
   ppx_monad_olwt
   ppx_monad_rlwt
   ppx_deriving_qcheck
   ppx_variants_conv))
 (inline_tests))

(ocamllex kindDanceLexer textFormulaLexer)

(menhir
 (modules kindDanceParser textFormulaParser)
 (flags --table))
