(include_subdirs qualified)

(library
 (name common)
 (public_name dancelor.common)
 (libraries
  cohttp
  cohttp-lwt
  madge
  nes
  logs
  lwt
  menhirLib
  monadise
  ppx_deriving_yojson.runtime
  str
  yojson)
 (preprocess
  (pps
   ppx_madge_wrapped_endpoints
   lwt_ppx
   ppx_deriving.std
   ppx_deriving_yojson
   ppx_fields_conv
   ppx_inline_test
   ppx_monad
   ppx_monad_olwt
   ppx_monad_rlwt
   ppx_deriving_qcheck
   ppx_variants_conv))
 (inline_tests))

(ocamllex kind_dance_lexer text_formula_lexer)

(menhir
 (modules kind_dance_parser text_formula_parser)
 (flags --table))
