(library
 (name madge)
 (modules :standard \ madge_client madge_server)
 (public_name dancelor.madge)
 (libraries dancelor.nes yojson uri logs cohttp)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.std lwt_ppx)))

(library
 (name madge_client)
 (modules madge_client)
 (public_name dancelor.madge.client)
 (libraries dancelor.nes dancelor.madge cohttp-lwt-jsoo yojson)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.std lwt_ppx)))

(library
 (name madge_server)
 (modules madge_server)
 (public_name dancelor.madge.server)
 (libraries dancelor.madge cohttp-lwt-unix)
 (preprocess
  (pps ppx_deriving_yojson lwt_ppx)))
