(library
 (name madge)
 (modules :standard \ madge_client madge_server ppx_madge_wrapped_endpoints)
 (public_name dancelor.madge)
 (libraries dancelor.nes yojson uri logs cohttp-lwt)
 (preprocess
  (staged_pps
   ppx_import
   ppx_deriving_yojson
   ppx_deriving.std
   lwt_ppx
   ppx_fields_conv)))

(library
 (name madge_client)
 (modules madge_client)
 (public_name dancelor.madge.client)
 (libraries
  dancelor.nes
  dancelor.madge
  cohttp-lwt-jsoo
  yojson
  js_of_ocaml-lwt)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.std lwt_ppx ppx_monad_rlwt)))

(library
 (name madge_server)
 (modules madge_server)
 (public_name dancelor.madge.server)
 (libraries dancelor.madge cohttp-lwt-unix)
 (preprocess
  (pps ppx_deriving_yojson lwt_ppx)))

(library
 (name ppx_madge_wrapped_endpoints)
 (modules ppx_madge_wrapped_endpoints)
 (kind ppx_deriver)
 (libraries base ppxlib)
 (preprocess
  (pps ppxlib.metaquot)))
