(include_subdirs qualified)

(library
 (name renderer)
 (public_name dancelor.renderer)
 (libraries
  cohttp-lwt-unix
  dancelor.nes.unix
  dancelor.common
  dancelor.madge.server
  logs
  lwt.unix
  str
  tyxml
  yaml)
 (preprocess
  (pps
   lwt_ppx
   ppx_blob
   ppx_deriving.std
   ppx_deriving_yojson
   ppx_fields_conv
   ppx_variants_conv
   ppx_monad
   ppx_monad_olwt
   ppx_monad_rlwt)))

(install
 (section share)
 (files
  (glob_files
   (*.nix with_prefix renderer))
  (glob_files_rec
   (book/* with_prefix renderer/book))
  (glob_files_rec
   (tune/* with_prefix renderer/tune))))
