(include_subdirs qualified)

(executable
 (name server)
 (public_name dancelor)
 (libraries
  cohttp-lwt-unix
  dancelor.nes
  dancelor.common
  dancelor.lilypond
  dancelor.madge.server
  logs
  lwt.unix
  str
  tyxml
  yaml)
 (preprocess
  (pps
   lwt_ppx
   ppx_blob
   ppx_deriving.std
   ppx_deriving_yojson
   ppx_fields_conv
   ppx_monad
   ppx_monad_olwt
   ppx_monad_rlwt))
 (preprocessor_deps
  (source_tree controller/template)))
