(include_subdirs qualified)

(executable
 (name server)
 (public_name dancelor)
 (package dancelor)
 (libraries
  cohttp-lwt-unix
  nes.unix
  dancelor.common
  madge.server
  logs
  lwt.unix
  monadise-lwt
  str
  tyxml
  yaml)
 (preprocess
  (pps
   lwt_ppx
   ppx_blob
   ppx_deriving.std
   ppx_deriving_yojson
   ppx_fields_conv
   ppx_variants_conv
   ppx_monad
   ppx_monad_olwt
   ppx_monad_rlwt))
 (preprocessor_deps
  (source_tree controller/template)))

(install
 (section share)
 (package dancelor)
 (files
  (glob_files
   (controller/renderer/*.nix with_prefix renderer))
  (glob_files_rec
   (controller/renderer/book/* with_prefix renderer/book))
  (glob_files_rec
   (controller/renderer/tune/* with_prefix renderer/tune))))
