(install
 (section share)
 (files
  android-chrome-192x192.png
  android-chrome-512x512.png
  apple-touch-icon.png
  arrow.svg
  cross.svg
  cross_red_circle.svg
  download.svg
  dune
  edit.svg
  favicon-16x16.png
  favicon-32x32.png
  favicon.ico
  (fonts/variable/SourceSansVariable-Italic.otf
   as
   fonts/variable/SourceSansVariable-Italic.otf)
  (fonts/variable/SourceSansVariable-Roman.otf
   as
   fonts/variable/SourceSansVariable-Roman.otf)
  (fonts/opentype/SourceSansPro-Semibold.otf
   as
   fonts/opentype/SourceSansPro-Semibold.otf)
  (fonts/opentype/SourceSansPro-BlackIt.otf
   as
   fonts/opentype/SourceSansPro-BlackIt.otf)
  (fonts/opentype/SourceSansPro-Black.otf
   as
   fonts/opentype/SourceSansPro-Black.otf)
  (fonts/opentype/SourceSansPro-SemiboldIt.otf
   as
   fonts/opentype/SourceSansPro-SemiboldIt.otf)
  (fonts/opentype/SourceSansPro-Light.otf
   as
   fonts/opentype/SourceSansPro-Light.otf)
  (fonts/opentype/SourceSansPro-Regular.otf
   as
   fonts/opentype/SourceSansPro-Regular.otf)
  (fonts/opentype/SourceSansPro-BoldIt.otf
   as
   fonts/opentype/SourceSansPro-BoldIt.otf)
  (fonts/opentype/SourceSansPro-ExtraLight.otf
   as
   fonts/opentype/SourceSansPro-ExtraLight.otf)
  (fonts/opentype/SourceSansPro-ExtraLightIt.otf
   as
   fonts/opentype/SourceSansPro-ExtraLightIt.otf)
  (fonts/opentype/SourceSansPro-It.otf
   as
   fonts/opentype/SourceSansPro-It.otf)
  (fonts/opentype/SourceSansPro-LightIt.otf
   as
   fonts/opentype/SourceSansPro-LightIt.otf)
  (fonts/opentype/SourceSansPro-Bold.otf
   as
   fonts/opentype/SourceSansPro-Bold.otf)
  (fonts/truetype/SourceSansPro-Regular.ttf
   as
   fonts/truetype/SourceSansPro-Regular.ttf)
  (fonts/truetype/SourceSansPro-Light.ttf
   as
   fonts/truetype/SourceSansPro-Light.ttf)
  (fonts/truetype/SourceSansPro-Bold.ttf
   as
   fonts/truetype/SourceSansPro-Bold.ttf)
  (fonts/truetype/SourceSansPro-Black.ttf
   as
   fonts/truetype/SourceSansPro-Black.ttf)
  (fonts/truetype/SourceSansPro-LightIt.ttf
   as
   fonts/truetype/SourceSansPro-LightIt.ttf)
  (fonts/truetype/SourceSansPro-BlackIt.ttf
   as
   fonts/truetype/SourceSansPro-BlackIt.ttf)
  (fonts/truetype/SourceSansPro-Semibold.ttf
   as
   fonts/truetype/SourceSansPro-Semibold.ttf)
  (fonts/truetype/SourceSansPro-ExtraLightIt.ttf
   as
   fonts/truetype/SourceSansPro-ExtraLightIt.ttf)
  (fonts/truetype/SourceSansPro-It.ttf
   as
   fonts/truetype/SourceSansPro-It.ttf)
  (fonts/truetype/SourceSansPro-BoldIt.ttf
   as
   fonts/truetype/SourceSansPro-BoldIt.ttf)
  (fonts/truetype/SourceSansPro-ExtraLight.ttf
   as
   fonts/truetype/SourceSansPro-ExtraLight.ttf)
  (fonts/truetype/SourceSansPro-SemiboldIt.ttf
   as
   fonts/truetype/SourceSansPro-SemiboldIt.ttf)
  (fonts/webfont/SourceSansPro-Latin.woff2
   as
   fonts/webfont/SourceSansPro-Latin.woff2)
  (fonts/webfont/SourceSansPro-Extended.woff2
   as
   fonts/webfont/SourceSansPro-Extended.woff2)
  (fonts/webfont/MaterialSymbolsOutlined.woff2
   as
   fonts/webfont/MaterialSymbolsOutlined.woff2)
  fonts.conf
  fonts.css
  logo.svg
  plus.svg
  site.webmanifest))

;; FIXME: With more recent version of Dune, the `(files)` stanza can take a
;; directory name, or a `(glob_files *)` for instance, which would avoid having
;; to list all the files explicitly.
