(include_subdirs no)

(library
 (name dancelor_client_formatters)
 (public_name dancelor.client.formatters)
 (preprocess
  (pps lwt_ppx js_of_ocaml-ppx))
 (libraries
  js_of_ocaml-lwt
  cohttp-lwt-jsoo
  dancelor.common
  dancelor.client.model
  dancelor.client.page
  dancelor.client.html
  dancelor.nes))
