(library
 (name dancelor_common_model)
 (public_name dancelor.common.model)
 (libraries
  str
  lwt
  dancelor.nes
  dancelor.madge
  dancelor.common.database
  menhirLib
  yojson
  ppx_deriving_yojson.runtime)
 (preprocess
  (staged_pps
   lwt_ppx
   ppx_inline_test
   ppx_deriving_yojson
   ppx_deriving.std
   ppx_monad
   ppx_monad_olwt
   ppx_monad_rlwt
   ppx_fields_conv
   ppx_variants_conv
   ppx_import))
 (modules_without_implementation
  personSignature
  danceSignature
  bookSignature
  anySignature
  setSignature
  tuneSignature
  versionSignature)
 (inline_tests))

(ocamllex kindDanceLexer)

(ocamllex textFormulaLexer)

(menhir
 (modules kindDanceParser))

(menhir
 (modules textFormulaParser)
 (flags --table))
