(library
 (name dancelor_server_controller)
 (public_name dancelor.server.controller)
 (libraries
  nes
  dancelor.lilypond
  dancelor.server.model
  cohttp-lwt-unix)
 (preprocess
  (pps
    lwt_ppx
    ppx_blob
    ppx_monad.std
    ppx_monad_olwt
    ppx_monad_rlwt))
 (preprocessor_deps (source_tree template)))
