;; NOTE: Queries need to type-check against the schema, so we call `sqlgg` with
;; both, but we disable the DDL category such that no `CREATE TABLE` or `ALTER
;; TABLE` etc. may take place.

(rule
 (target queries_sql.ml)
 (deps schema.sql queries.sql)
 (action
  (with-stdout-to
   %{target}
   (run sqlgg -gen caml_io -category -DDL -params unnamed %{deps}))))
