(rule
 (target migrations_sql.ml)
 (deps migrations.sql)
 (action
  (with-stdout-to
   %{target}
   (run sqlgg -gen caml_io -params unnamed %{deps}))))

;; NOTE: Queries need to type-check against the schema, so we call `sqlgg` with
;; both, but we disable the DDL category such that no `CREATE TABLE` or `ALTER
;; TABLE` etc. may take place.

(rule
 (target queries_sql.ml)
 (deps schema.sql queries.sql)
 (action
  (with-stdout-to
   %{target}
   (run sqlgg -gen caml_io -category -DDL -params unnamed %{deps}))))

(rule
 (target book_sql.ml)
 (deps schema.sql book.sql)
 (action
  (with-stdout-to
   %{target}
   (run sqlgg -gen caml_io -category -DDL -params unnamed %{deps}))))

(rule
 (target dance_sql.ml)
 (deps schema.sql dance.sql)
 (action
  (with-stdout-to
   %{target}
   (run sqlgg -gen caml_io -category -DDL -params unnamed %{deps}))))

(rule
 (target person_sql.ml)
 (deps schema.sql person.sql)
 (action
  (with-stdout-to
   %{target}
   (run sqlgg -gen caml_io -category -DDL -params unnamed %{deps}))))

(rule
 (target source_sql.ml)
 (deps schema.sql source.sql)
 (action
  (with-stdout-to
   %{target}
   (run sqlgg -gen caml_io -category -DDL -params unnamed %{deps}))))
