(rule
 (target migrations_sql.ml)
 (deps migrations.sql)
 (action
  (with-stdout-to
   %{target}
   (run sqlgg -gen caml -dialect postgresql -params postgresql %{deps}))))

;; NOTE: Queries need to type-check against the schema, so we call `sqlgg` with
;; both, but we disable the DDL category such that no `CREATE TABLE` or `ALTER
;; TABLE` etc. may take place.

(rule
 (target globally_unique_id_sql.ml)
 (deps schema.sql globally_unique_id.sql)
 (action
  (with-stdout-to
   %{target}
   (run
    sqlgg
    -gen
    caml
    -category
    -DDL
    -dialect
    postgresql
    -params
    postgresql
    %{deps}))))

(rule
 (target book_sql.ml)
 (deps schema.sql book.sql)
 (action
  (with-stdout-to
   %{target}
   (run
    sqlgg
    -gen
    caml
    -category
    -DDL
    -dialect
    postgresql
    -params
    postgresql
    %{deps}))))

(rule
 (target dance_sql.ml)
 (deps schema.sql dance.sql)
 (action
  (with-stdout-to
   %{target}
   (run
    sqlgg
    -gen
    caml
    -category
    -DDL
    -dialect
    postgresql
    -params
    postgresql
    %{deps}))))

(rule
 (target person_sql.ml)
 (deps schema.sql person.sql)
 (action
  (with-stdout-to
   %{target}
   (run
    sqlgg
    -gen
    caml
    -category
    -DDL
    -dialect
    postgresql
    -params
    postgresql
    %{deps}))))

(rule
 (target set_sql.ml)
 (deps schema.sql set.sql)
 (action
  (with-stdout-to
   %{target}
   (run
    sqlgg
    -gen
    caml
    -category
    -DDL
    -dialect
    postgresql
    -params
    postgresql
    %{deps}))))

(rule
 (target source_sql.ml)
 (deps schema.sql source.sql)
 (action
  (with-stdout-to
   %{target}
   (run
    sqlgg
    -gen
    caml
    -category
    -DDL
    -dialect
    postgresql
    -params
    postgresql
    %{deps}))))

(rule
 (target tune_sql.ml)
 (deps schema.sql tune.sql)
 (action
  (with-stdout-to
   %{target}
   (run
    sqlgg
    -gen
    caml
    -category
    -DDL
    -dialect
    postgresql
    -params
    postgresql
    %{deps}))))

(rule
 (target user_sql.ml)
 (deps schema.sql user.sql)
 (action
  (with-stdout-to
   %{target}
   (run
    sqlgg
    -gen
    caml
    -category
    -DDL
    -dialect
    postgresql
    -params
    postgresql
    %{deps}))))

(rule
 (target version_sql.ml)
 (deps schema.sql version.sql)
 (action
  (with-stdout-to
   %{target}
   (run
    sqlgg
    -gen
    caml
    -category
    -DDL
    -dialect
    postgresql
    -params
    postgresql
    %{deps}))))
