(library
 (name dancelor_common_model_endpoints)
 (public_name dancelor.common.model.endpoints)
 (libraries
  str
  lwt
  dancelor.nes
  dancelor.madge
  dancelor.common.database
  dancelor.common.model.core
  menhirLib
  yojson
  ppx_deriving_yojson.runtime)
 (preprocess
  (staged_pps
   lwt_ppx
   ppx_inline_test
   ppx_deriving_yojson
   ppx_deriving.std
   ppx_monad
   ppx_monad_olwt
   ppx_monad_rlwt
   ppx_fields_conv
   ppx_variants_conv
   ppx_import))
 (inline_tests))
